# llama

./: .gitignore  .gitlab-ci.yml  Makefile.am  README.md  configure.ac  magics.json  plan.txt
.world/: build.sh  clean.sh  config.sh  install.sh  setup.sh
include/: batchhandler.h  blocksequence.h  blocksequence_impl.h  boost_asio.h  cli.h  dirconversion.h  direntbatch.h  direntstack.h  dirreader.h  duckhash.h  duckinode.h  dummytracker.h  dummytsk.h  fieldhash.h  fieldhasher.h  filerecord.h  filescheduler.h  filesignatures.h  fsm.h  inode.h  inodeandblocktrackerimpl.h  inputhandler.h  inputreader.h  jsoncons_wrapper.h  lexer.h  llama.h  llama_parser.h  llamabatch.h  llamaduck.h  mockinputhandler.h  mockoutputhandler.h  mockoutputwriter.h  options.h  outputchunk.h  outputhandler.h  outputstream.h  outputtar.h  outputwriter.h  parser.h  patternparser.h  (+22 more)
src/: batchhandler.cpp  cli.cpp  dirconversion.cpp  direntbatch.cpp  direntstack.cpp  dirreader.cpp  duckinode.cpp  file_signatures.cpp  filescheduler.cpp  filesignatures.cpp  fsm.cpp  inodeandblocktrackerimpl.cpp  lexer.cpp  llama.cpp  main.cpp  outputstream.cpp  outputtar.cpp  parser.cpp  pooloutputhandler.cpp  processor.cpp  querybuilder.cpp  readseek_impl.cpp  recordhasher.cpp  rule_reader.cpp  ruleengine.cpp  rulereader.cpp  timestamps.cpp  tskconversion.cpp  tskfacade.cpp  tskreader.cpp  tskreaderhelper.cpp  tsktimestamps.cpp  util.cpp
src/grammar/: llama.ebnf  llama_parser.cpp
src/llama/: blocksequence_impl.cpp  cli.cpp  dirreader.cpp  filerecord.cpp  llama.cpp  outputstream.cpp  pooloutputhandler.cpp  processor.cpp  processor.h  recordbuffer.cpp  recordbuffer.h  tskreader.cpp  tskreaderhelper.cpp
test/: test_cli.cpp  test_direntstack.cpp  test_duckdb.cpp  test_fileproxy.cpp  test_filesignatures.cpp  test_fsm.cpp  test_lexer.cpp  test_llama.cpp  test_llamaparser.cpp  test_parser.cpp  test_patternparser.cpp  test_processor.cpp  test_querybuilder.cpp  test_querygenerator.cpp  test_readseek.cpp  test_recordbuffer.cpp  test_recordhasher.cpp  test_ruleengine.cpp  test_rulereader.cpp  test_tskconversion.cpp  test_tskreader.cpp  test_tskreaderhelper.cpp  test_tsktimestamps.cpp  test_util.cpp
test/benchmarks/: test_parser.cpp  test_yara.cpp  write_parser_benchmark_to_csv.py
test/data/: offsets.json  pattern_lengths.json  test_signatures.json
test/data/yara/: HvS_APT27_HyperBro_Encrypted_Stage2.yar  apt_apt15.yar
test/llama/: test_blocksequence.cpp  test_cli.cpp  test_dirconversion.cpp  test_direntstack.cpp  test_dirreader.cpp  test_fieldhasher.cpp  test_filerecord.cpp  test_hex.cpp  test_inodeandblocktrackerimpl.cpp  test_processor.cpp  test_recordhasher.cpp  test_tskconversion.cpp  test_tskimgassembler.cpp  test_tskreader.cpp  test_tskreaderhelper.cpp
test/rules/: kwsrch-2.llama  test_rule.llama
